# osx_robot_ros_core

./: .gitignore  README.md
osx_examples/: CMakeLists.txt  README.md  package.xml
osx_examples/scripts/: cooking_demo_mtc.py  moveit_examples.py  mtc_examples.py  mtc_test.py  pick_and_place_cucumber.py  pick_knife_example.py  test.py  ur_control_examples.py
osx_gazebo/: CMakeLists.txt  package.xml
osx_gazebo/controller/: 1_bot_controllers.yaml  2_bot_controllers.yaml
osx_gazebo/launch/: aist_gazebo.launch  b_bot_gazebo.launch  controller_utils.launch  osx_add_ar_marker.launch  osx_gazebo.launch
osx_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
osx_moveit_ur5e/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
osx_moveit_ur5e/config/: ur5e.srdf  (+2 more)
osx_msgs/: CMakeLists.txt  README.md  package.xml
osx_robot_control/: CMakeLists.txt  README.md  package.xml  setup.py
osx_robot_control/config/gym/: a_bot_pose_mapper_config.yaml  b_bot_pencil_eraser.yaml  b_bot_pose_mapper_config.yaml  b_bot_powder_grinding.yaml  b_bot_pulley_insertion.yaml  b_bot_simple.yaml  b_bot_simple_pick.yaml  b_bot_toy_insertion.yaml  b_bot_wiping.yaml  b_bot_writing.yaml  bimanual_cap_insertion.yaml  bimanual_round_insertion.yaml  bimanual_square_insertion.yaml  compliant_control_env.yaml  dual_arm_simple.yaml  pulley_insertion.yaml
osx_robot_control/config/plot_juggler/: plotjuggler_ab_force.xml  plotjuggler_ft.xml  plotjuggler_multi.xml
osx_robot_control/config/rqt_ft/: a_bot_filtered.xml  b_bot_tcp.xml
osx_robot_control/config/saved_plans/: motor_pulley_orient_b_bot
osx_robot_control/scripts/: tf_echo.py
osx_robot_control/src/osx_gym_env/: compliant_control_env.py  utils.py
osx_robot_control/src/osx_robot_control/: common.py  core.py  dual_arm.py  helpers.py  markers_scene.py  math_utils.py  robot_base.py  robotiq_gripper.py  slicing_rl_policy.py  tools.py  ur_force_control.py  ur_fzi_force_control.py  ur_robot.py  utils.py
osx_rviz/: CMakeLists.txt  package.xml  plugin_description.xml  setup.py
osx_scene_description/: CMakeLists.txt  README.md  package.xml
osx_skills/: CMakeLists.txt  README.md  package.xml
osx_ur5e/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
osx_ur5e/config/: default-display.rviz  ur5e_calibration.yaml  ur5e_controllers.yaml
osx_ur5e/launch/: camera_bringup.launch  connect_real_robot.launch  display.launch
(+141 files in other folders)
